# CRAVE

./: .env.example  .gitignore  CONTRIBUTING.md  CRAVE_Status.bat  DEVELOPMENT_LOG.md  LICENSE  MIGRATION_GUIDE.md  PRD.md  PROJECT_STATE.md  README.md  YOUTUBE_OAUTH_GUIDE.md  crave_autoboot.bat  crave_autoboot.vbs  crave_setup.bat  crave_status.py  main.py  overview.md  program.md  pyproject.toml  register_autoboot.ps1  requirements.txt  run_bot.py  run_validation.py  silent_start.vbs  upgrade_models.bat  upgrade_models_7b.py  vault_adder.py
.github/workflows/: crave_tests.yml
Main_Lead/: program.md
Sub_Projects/: __init__.py
Sub_Projects/Hacking/: pentagi_installer.py  port_scanner.py
Sub_Projects/Trading/: __init__.py  aws_manager.py  backtest_agent.py  backtest_agent_v10.py  daily_bias_engine.py  data_agent.py  database_manager.py  dynamic_tp_engine.py  economic_calendar.py  event_hedge_manager.py  execution_agent.py  instrument_scanner.py  node_orchestrator.py  (+13 more)
config/: benchmark_prompts.json  hardware.example.json  hardware.json  mcp_servers.json  orb_settings.json  youtube_client_secret.example.json
crave-dashboard/: next.config.ts  package-lock.json  package.json
data/: backtest_status.json  supabase_migration.sql
extracted_zones/: jarvis_llm.py  zone_wiring.py
scratch/: check_bot.py  check_bot_expanded.py
src/: verify_env.py
tests/: benchmark_ollama.py  diag_network.py  get_telegram_id.py  test_bot.py  test_integration.py  test_mcp_benchmark.py  test_phase2.py  test_phase3.py  test_phase4.py  test_smoke.py  test_smtp.py  test_trading_unit.py
(+92 files in other folders)
