[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crave"
version = "10.4.0"
description = "Autonomous Agentic Operating System & Trading Bot"
authors = [
    {name = "CRAVE AI", email = "admin@crave.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.1.7",
    "langchain>=0.1.13",
    "PyQt6>=6.6.1",
    "psutil>=5.9.8",
    "python-dotenv>=1.0.1",
    "cryptography>=42.0.5",
    "bcrypt>=4.1.2"
]

[project.optional-dependencies]
audio = ["openwakeword", "whisper", "edge-tts", "elevenlabs", "pyttsx3", "sounddevice"]
trading = ["pandas", "yfinance", "ta"]
vision = ["opencv-python"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "Sub_Projects*"]
